[package]
name = "sherman"
version = "0.1.0"
authors = ["sharnoff <29154784+sharnoff@users.noreply.github.com>"]
edition = "2021"
repository = "https://github.com/dymium-editor/sherman"
license = "MIT OR Apache-2.0"
description = "Run-length encoded, highly-parameterizable B-Tree"

[dependencies]
arbitrary = { version = "1.1.3", optional = true, features = ["derive"] }

[features]
default = []
nightly = []
fuzz = ["dep:arbitrary"]
